<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My 金迹</string>
    <string name="action_settings">Settings</string>
	<string name="week">[星期]</string>
	<string name="expend">[支出]</string>
	<string name="sum">[总金额]</string>
	<string name="lesser">[较小]</string>
	<string name="more">[较大]</string>
	<string name="advertisement">如您对本应用有任何建议或意见，欢迎发邮件于：phlofy@163.com。\n\n——My 金迹 1.0版本——</string>
	<string name="incometomonth">本月收入:</string>
	<string name="expendtomoth">本月支出:</string>
	<string name="surplus">本月盈余:</string>
	<string name="prompt">请以空格为分隔符</string>
	<string name="alltype">全部类型</string>
	<string name="prompt1">格式清单</string>
	<string name="prompt2">金额输入 -></string>
	<string name="prompt3">类型输入 -></string>
	<string name="prompt4">备注输入 -></string>
	<string name="prompt5">My小型计算器</string>
	<string name="prompt6">输入类型名</string>
	<string name="prompt7">输入密码</string>
	<string name="prompt8">选择删除的类型</string>
	<string name="search">搜索</string>
	<string name="save">保存</string>
	<string name="cancel">取消</string>
	<string name="yes">确定</string>
	<string name="delete">删除</string>
	<string name="landing">登陆账号</string>
	<string name="write">输入账号:</string>
	<string name="inputpassword">输入密码:</string>
	<string name="wel">欢迎登陆My 金迹个人账号</string>
	<string name="nowex">当前经验值：</string>
	<string name="devex">提升经验值：</string>
	<string name="inpassword">系统密钥值：</string>
	<string name="upgrade">升级</string>
	<string name="tishi">vip-1: 经验值达21\nvip-2: 经验值达42\nvip-3: 经验值达63\nvip-4: 经验值达105\nvip-5: 经验值达168</string>
	<string name="signaccount">注册账号</string>
	<string name="name">昵称： </string>
	<string name="affirm">确认密码:</string>
	<string name="repitation">成就：</string>
	<string name="grade">等级：</string>
	<string name="historyexpend">历史总消费:</string>
	<string name="engelcoefficient">恩格尔系数:</string>
	<string name="oldpassword">旧密码</string>
	<string name="newpassword">新密码</string>
	<string name="icon">头像预览</string>
	<string name="averagesurplus">平均盈余:</string>
	<string name="thismonthratio">本月系数:</string>
	<string name="thismonthreputation">趋势盈余:</string>
</resources>
