<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_create"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <RelativeLayout android:id="@+id/layout_delete_rela"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/heng_bai" 
        
        >
        <ImageView
            android:id="@+id/layout_delete_imag"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/ic_launcher" 
            />

		<TextView
		    android:id="@+id/layout_delete_edit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_toRightOf="@+id/layout_delete_imag"
		    android:background="@drawable/edit_no"
		    android:ems="10"
		    android:gravity="center_vertical"
		    android:hint="@string/prompt8"
		    android:textColor="#ffffff"
		    android:textSize="18sp" />

    </RelativeLayout>

	<ListView
	    android:id="@+id/layout_delete_list"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@+id/layout_delete_rela_a"
	    android:layout_below="@+id/layout_delete_rela" />

	<LinearLayout
	    android:id="@+id/layout_delete_rela_a"
	    android:layout_width="fill_parent"
	    android:layout_height="50dip"
	    android:orientation="horizontal"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/shiback" >
		<Button
        android:id="@+id/layout_delete_button_cancel"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:background="@drawable/create_button"
        android:textColor="#ffffff"
        android:onClick="cancel_OnClick"
        />
	    <Button
        android:id="@+id/layout_delete_button"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:text="@string/delete" 
        android:background="@drawable/create_button"
        android:textColor="#ffffff"
        />
	</LinearLayout>

	

</RelativeLayout>