<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_create"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <RelativeLayout android:id="@+id/createtype_rela"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/heng_bai" 
        
        >
        <ImageView
            android:id="@+id/createtype_imag"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/ic_launcher" 
            />

		<EditText
		    android:id="@+id/createtype_edit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_toRightOf="@+id/createtype_imag"
		    android:background="@drawable/edit_no"
		    android:ems="10"
		    android:gravity="center_vertical"
		    android:hint="@string/prompt6"
		    android:textColor="#ffffff"
		    android:textSize="18sp" />

    </RelativeLayout>
	<GridView
	    android:id="@+id/createtype_grid_gridview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@+id/creattype_rela_a"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/createtype_rela"
	    android:layout_marginTop="10dip"
	    android:gravity="center"
	    android:numColumns="5" >

	</GridView>
	<LinearLayout
	    android:id="@+id/creattype_rela_a"
	    android:layout_width="fill_parent"
	    android:layout_height="50dip"
	    android:orientation="horizontal"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/shiback" >
		<Button
        android:id="@+id/createtype_button_cancel"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:background="@drawable/create_button"
        android:textColor="#ffffff"
        android:onClick="cancel_OnClick"
        />
	    <Button
        android:id="@+id/createtype_button"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:text="@string/yes" 
        android:background="@drawable/create_button"
        android:textColor="#ffffff"
        />

    
	</LinearLayout>

	

</RelativeLayout>