<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/fragment_main"
	android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="150dip"
    android:background="@drawable/yyy"
    >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        >
        <TextView
            android:id="@+id/fragemt_three_text_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="->" />

        <Button
            android:id="@+id/fragment_three_button_a"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/fragemt_three_text_a"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="@drawable/time_back"
            />

        <Button
            android:id="@+id/fragment_three_button_b"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/fragemt_three_text_a"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="@drawable/time_back" 
            />

    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/biankuang_end"
        >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/fragment_three_c"
            android:layout_toRightOf="@+id/fragment_three_d"
            android:singleLine="true"
            android:textColor="#111111"
            android:textCursorDrawable="@null"
            android:background="@drawable/biankuang_end"	
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textSize="18sp" 
            android:hint="@string/prompt"
            >


        </EditText>

        <Button
            android:id="@+id/fragment_three_c"
            android:layout_width="100dip"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/biankuang_end"
            android:textColor="#000000"
            android:text="@string/alltype" />

        <ToggleButton
            android:id="@+id/fragment_three_d"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
      		android:background="@drawable/in_on_clude"
            android:textColor="#000000"
            android:textOn=""
   	        android:textOff="" />

    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        >
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="horizontal"
		    >
	        <Button
	            android:id="@+id/fragment_three_button_e"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:layout_weight="3"
	            android:background="@drawable/biankuang_end"
	            android:textColor="#000000"
	            android:text="@string/prompt1" />
	
	        <Button
	            android:id="@+id/fragment_three_button_f"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:layout_weight="2"
	            android:background="@drawable/biankuang_end"
	            android:textColor="#000000"
	            android:text="@string/search" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
